--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,7 @@
 {
+    ":Chooseoneofthegroupsanditwillbesenttoallaccounts":"أختر أحد المجموعات ويتم الإرسال على جميع الحسابات",
+    "ChooseapersonfromFacebookandsendyouradtoallhisfollowers": "أختر شخص من فيسبوك ارسل اعلانك على جميع متابعينه",
+    "AddgroupsFacebook": "اضافة مجموعات فيسبوك",
     "Choosedestination(deleteFacebook)": "إختر الوجهة (حذف فيسبوك)",
     "NumberofFacebookgroups": "عدد المجموعات فيسبوك",
     "Chooseadestination(Facebook groups)": "أختر الوجهة (مجموعات فيسبوك)",
