--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,7 @@
 {
+    "Chooseoneofthegroupsanditwillbesenttoallaccounts": "Choose one of the groups and it will be sent to all accounts",
+    "ChooseapersonfromFacebookandsendyouradtoallhisfollowers": "Choose a person from Facebook and send your ad to all his followers",
+    "AddgroupsFacebook": "Add groups Facebook",
     "Choosedestination(deleteFacebook)": "Choose destination (delete Facebook)",
     "NumberofFacebookgroups": "Number of Facebook groups",
     "Chooseadestination(Facebook groups)": "Choose a destination (Facebook groups)",
