--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Numberofaccounts:": "Number of accounts :",
     "search": "Search",
     "Chooseoneofthegroupsanditwillbesenttoallaccounts": "Choose one of the groups and it will be sent to all accounts",
     "ChooseapersonfromFacebookandsendyouradtoallhisfollowers": "Choose a person from Facebook and send your ad to all his followers",
