--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "SeehowtouseSMS?": "See how to use SMS?",
+    "Transferanothernumberfromthephonebook": "Transfer another number from the contacts",
     "Numberofaccounts:": "Number of accounts :",
     "search": "Search",
     "Chooseoneofthegroupsanditwillbesenttoallaccounts": "Choose one of the groups and it will be sent to all accounts",
