--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Addafileofnumberstosendtothem": "إضافة ملف من الأرقام لإرسال اليهم",
     "SeehowtouseSMS?": "شاهد طريقة أستخدام sms ؟",
     "Transferanothernumberfromthephonebook": "تحويل رقم أخر من دليل الهاتف",
     "Numberofaccounts:": "عدد الحسابات :",
