--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "Addafileofnumberstosendtothem": "Add a file of numbers to send to them",
     "SeehowtouseSMS?": "See how to use SMS?",
     "Transferanothernumberfromthephonebook": "Transfer another number from the contacts",
     "Numberofaccounts:": "Number of accounts :",
