tr SMSChooseDestinationPhoneDirectoryView & sending

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,6 @@
 {
+    "Numberofnumberssent:": "عدد المرسل من الأرقام :",
+    "Numberofnumbers:(5000)contacts": "عدد الأرقام :(5000) دليل الهاتف",
     "Addafileofnumberstosendtothem": "إضافة ملف من الأرقام لإرسال اليهم",
     "SeehowtouseSMS?": "شاهد طريقة أستخدام sms ؟",
     "Transferanothernumberfromthephonebook": "تحويل رقم أخر من دليل الهاتف",
