--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,6 @@
 {
+    "Numberofnumberssent:": "Number of numbers sent :",
+    "Numberofnumbers:(5000)contacts" : "Number of numbers (5000) contacts",
     "Addafileofnumberstosendtothem": "Add a file of numbers to send to them",
     "SeehowtouseSMS?": "See how to use SMS?",
     "Transferanothernumberfromthephonebook": "Transfer another number from the contacts",
