tr email feature & finish translation the app

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,8 @@
 {
+    "Numberofemailssent:": "عدد المرسل من الإيميلات :",
+    "Numberofemails:": "عدد الأيميلات :",
+    "Numberofemails:(5000)email": "عدد الأيميلات :(5000) ميل",
+    "Seehowtouseemail?": "شاهد طريقة أستخدام البريد الالكتروني ؟",
     "Numberofnumberssent:": "عدد المرسل من الأرقام :",
     "Numberofnumbers:(5000)contacts": "عدد الأرقام :(5000) دليل الهاتف",
     "Addafileofnumberstosendtothem": "إضافة ملف من الأرقام لإرسال اليهم",
