--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,6 +1,10 @@
 {
+    "Numberofemailssent:": "Number of emails sent :",
+    "Numberofemails:": "Number of emails :",
+    "Numberofemails:(5000)email": "Number of emails (5000) email",
+    "Seehowtouseemail?": "See how to use email ?",
     "Numberofnumberssent:": "Number of numbers sent :",
-    "Numberofnumbers:(5000)contacts" : "Number of numbers (5000) contacts",
+    "Numberofnumbers:(5000)contacts": "Number of numbers (5000) contacts",
     "Addafileofnumberstosendtothem": "Add a file of numbers to send to them",
     "SeehowtouseSMS?": "See how to use SMS?",
     "Transferanothernumberfromthephonebook": "Transfer another number from the contacts",
@@ -233,7 +237,7 @@
     "city": "City",
     "phone": "Phone Number",
     "profile_image": "Profile Image",
-    "account_registration": "sign Up",
+    "account_registration": "Sign Up",
     "last_name": "Last Name",
     "first_name": "First Name",
     "second_name": "Second Name",
