Fix password validation & required terms and conditions & arrow back

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -125,7 +125,7 @@
     "Camera": "الكاميرا",
     "ChooseImageSource": "اختر مصدر الصورة",
     "confirm_password": "تأكيد كلمة السر",
-    "checkPassword": "كلمة السر يجب أن تحتوي على 6 أحرف على الأقل\nتشمل حرف كبير، حرف صغير، و 6 أرقام",
+    "checkPassword": "كلمه المرور يجب أن تحتوي على حرفين على الأقل\nتشمل حرف صغير وحرف كبير و 6 ارقام او اكثر",
     "passwordDontMatch": "كلمة السر غير متطابقة",
     "defaultValidation": "هذا الحقل مطلوب",
     "passwordValidation": "من فضلك قم بادخال كلمة السر",
