Add logos to subscribe package view & btn orange color

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -193,14 +193,14 @@
     "Visa / Master Card": "فيزا / ماستر كارد",
     "payment_gateway": "بوابه الدفع",
     "subscribe": "أشتراك",
-    "email_logo_free": "شعار الإيميلات متاح لمده 4 أسابيع",
-    "sms_logo_free": "شعار رسائل نصية متاح لمده 4 أسابيع",
-    "ticktok_logo_free": "شعار تيك توك متاح لمده 4 أسابيع",
-    "facebook_logo_free": "شعار فيس بوك متاح لمده 4 أسابيع",
-    "x_logo_free": "شعار X متاح لمده 4 أسابيع",
-    "instagram_logo_free": "شعار الإنستجرام متاح لمده 4 أسابيع",
-    "telegram_logo_free": "شعار تليجرام متاح لمده 4 أسابيع",
-    "whatsapp_logo_free": "شعار واتساب متاح لمده 4 أسابيع",
+    "email_logo_free": "متاح لمده 4 أسابيع",
+    "sms_logo_free": "متاح لمده 4 أسابيع",
+    "ticktok_logo_free": "متاح لمده 4 أسابيع",
+    "facebook_logo_free": "متاح لمده 4 أسابيع",
+    "x_logo_free": "متاح لمده 4 أسابيع",
+    "instagram_logo_free": "متاح لمده 4 أسابيع",
+    "telegram_logo_free": "متاح لمده 4 أسابيع",
+    "whatsapp_logo_free": "متاح لمده 4 أسابيع",
     "15_diamond_free": "15 ماسة مجانية ",
     "30_saudi_riyal": "30 ريال سعودى",
     "packege_features": "مزايا الباقة",
