--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -192,14 +192,14 @@
     "Visa / Master Card": "Visa / Master Card",
     "payment_gateway": "Payment Gateway",
     "subscribe": "Subscribe",
-    "email_logo_free": "Email logo is free for 4 weeks",
-    "sms_logo_free": "SMS logo is free for 4 weeks",
-    "ticktok_logo_free": "TikTok logo is free for 4 weeks",
-    "facebook_logo_free": "Facebook logo is free for 4 weeks",
-    "x_logo_free": "X logo is free for 4 weeks",
-    "instagram_logo_free": "Instagram logo is free for 4 weeks",
-    "telegram_logo_free": "Telegram logo is free for 4 weeks",
-    "whatsapp_logo_free": "WhatsApp logo is free for 4 weeks",
+    "email_logo_free": "is free for 4 weeks",
+    "sms_logo_free": "free for 4 weeks",
+    "ticktok_logo_free": "is free for 4 weeks",
+    "facebook_logo_free": "is free for 4 weeks",
+    "x_logo_free": "is free for 4 weeks",
+    "instagram_logo_free": "is free for 4 weeks",
+    "telegram_logo_free": "is free for 4 weeks",
+    "whatsapp_logo_free": "is free for 4 weeks",
     "15_diamond_free": "15 Free Diamonds",
     "30_saudi_riyal": "30 Saudi Riyals",
     "packege_features": "Package Features",
