edit whatsapp delete all groups

--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "deleteallgroups": "Delete all groups",
     "Numberofemailssent:": "Number of emails sent :",
     "Numberofemails:": "Number of emails :",
     "Numberofemails:(5000)email": "Number of emails (5000) email",
