--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "deleteallgroups": "حذف جميع المجموعات",
     "Numberofemailssent:": "عدد المرسل من الإيميلات :",
     "Numberofemails:": "عدد الأيميلات :",
     "Numberofemails:(5000)email": "عدد الأيميلات :(5000) ميل",
