edit telegram channel name

--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "addTelegramChannel": "Add Telegram Channel",
     "deleteallgroups": "Delete all groups",
     "Numberofemailssent:": "Number of emails sent :",
     "Numberofemails:": "Number of emails :",
