--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "addTelegramChannel": "أضف قناه للتلجرام",
     "deleteallgroups": "حذف جميع المجموعات",
     "Numberofemailssent:": "عدد المرسل من الإيميلات :",
     "Numberofemails:": "عدد الأيميلات :",
