--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "7.99_dollars": "7.99 dollars",
     "addTelegramChannel": "Add Telegram Channel",
     "deleteallgroups": "Delete all groups",
     "Numberofemailssent:": "Number of emails sent :",
