Edit change name delete groups (telegram - facebook)

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "deletegroups(locksend)":"حذف المجموعات مقفلين خاصيه الإرسال",
     "7.99_dollars": "7.99 دولار",
     "addTelegramChannel": "أضف قناه للتلجرام",
     "deleteallgroups": "حذف جميع المجموعات",
