--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "Chooseapersonfromtiktokandsendyouradtoallhisfollowers":  "أختر شخص من تيكتوك ارسل اعلانك على جميع متابعينه",
     "See how to use Tiktok?" : "شاهد طريقة أستخدام تيكتوك؟",
     "deletegroups(locksend)":"حذف المجموعات مقفلين خاصيه الإرسال",
     "7.99_dollars": "7.99 دولار",
