Finish Choose Destination & Sending View

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+     "Choosedestination(TikTok)": "أختر الوجهة (تيكتوك)",
     "Chooseapersonfromtiktokandsendyouradtoallhisfollowers":  "أختر شخص من تيكتوك ارسل اعلانك على جميع متابعينه",
     "See how to use Tiktok?" : "شاهد طريقة أستخدام تيكتوك؟",
     "deletegroups(locksend)":"حذف المجموعات مقفلين خاصيه الإرسال",
