--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+     "Choosedestination(TikTok)": "Choose destination (TikTok)",
     "Chooseapersonfromtiktokandsendyouradtoallhisfollowers": "Choose a person from Tiktok and send your ad to all his followers",
     "See how to use Tiktok?" : "See how to use Tiktok?",
     "deletegroups(locksend)": "Delete groups (lock send)",
