edit in facebook delete groups

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,8 +1,9 @@
 {
-     "Choosedestination(TikTok)": "أختر الوجهة (تيكتوك)",
-    "Chooseapersonfromtiktokandsendyouradtoallhisfollowers":  "أختر شخص من تيكتوك ارسل اعلانك على جميع متابعينه",
-    "See how to use Tiktok?" : "شاهد طريقة أستخدام تيكتوك؟",
-    "deletegroups(locksend)":"حذف المجموعات مقفلين خاصيه الإرسال",
+    "DeletegroupsYouarenotaccepted": "حذف المجموعات لم يتم قبولك",
+    "Choosedestination(TikTok)": "أختر الوجهة (تيكتوك)",
+    "Chooseapersonfromtiktokandsendyouradtoallhisfollowers": "أختر شخص من تيكتوك ارسل اعلانك على جميع متابعينه",
+    "See how to use Tiktok?": "شاهد طريقة أستخدام تيكتوك؟",
+    "deletegroups(locksend)": "حذف المجموعات مقفلين خاصيه الإرسال",
     "7.99_dollars": "7.99 دولار",
     "addTelegramChannel": "أضف قناه للتلجرام",
     "deleteallgroups": "حذف جميع المجموعات",
