--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,7 +1,8 @@
 {
-     "Choosedestination(TikTok)": "Choose destination (TikTok)",
+    "DeletegroupsYouarenotaccepted": "Delete groups you are not accepted",
+    "Choosedestination(TikTok)": "Choose destination (TikTok)",
     "Chooseapersonfromtiktokandsendyouradtoallhisfollowers": "Choose a person from Tiktok and send your ad to all his followers",
-    "See how to use Tiktok?" : "See how to use Tiktok?",
+    "See how to use Tiktok?": "See how to use Tiktok?",
     "deletegroups(locksend)": "Delete groups (lock send)",
     "7.99_dollars": "7.99 dollars",
     "addTelegramChannel": "Add Telegram Channel",
