Change price sar to usd when tap in wallet screen

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "usd": "دولار",
     "DeletegroupsYouarenotaccepted": "حذف المجموعات لم يتم قبولك",
     "Choosedestination(TikTok)": "أختر الوجهة (تيكتوك)",
     "Chooseapersonfromtiktokandsendyouradtoallhisfollowers": "أختر شخص من تيكتوك ارسل اعلانك على جميع متابعينه",
