--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "usd": "USD",
     "DeletegroupsYouarenotaccepted": "Delete groups you are not accepted",
     "Choosedestination(TikTok)": "Choose destination (TikTok)",
     "Chooseapersonfromtiktokandsendyouradtoallhisfollowers": "Choose a person from Tiktok and send your ad to all his followers",
