--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -134,7 +134,7 @@
     "Camera": "الكاميرا",
     "ChooseImageSource": "اختر مصدر الصورة",
     "confirm_password": "تأكيد كلمة السر",
-    "checkPassword": "كلمه المرور يجب أن تحتوي على حرفين على الأقل\nتشمل حرف صغير وحرف كبير و 6 ارقام او اكثر",
+    "checkPassword": "كلمه المرور يجب أن تحتوي على حرفين على الأقل\nتشمل حرف كبير و حرف صغير و 6 ارقام او اكثر",
     "passwordDontMatch": "كلمة السر غير متطابقة",
     "defaultValidation": "هذا الحقل مطلوب",
     "passwordValidation": "من فضلك قم بادخال كلمة السر",
