--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -1,4 +1,5 @@
 {
+    "You must accept the terms and conditions": "يجب عليك قبول الشروط والاحكام",
     "usd": "دولار",
     "DeletegroupsYouarenotaccepted": "حذف المجموعات لم يتم قبولك",
     "Choosedestination(TikTok)": "أختر الوجهة (تيكتوك)",
