--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "You must accept the terms and conditions": "You must accept the terms and conditions",
     "usd": "USD",
     "DeletegroupsYouarenotaccepted": "Delete groups you are not accepted",
     "Choosedestination(TikTok)": "Choose destination (TikTok)",
