--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,4 +1,5 @@
 {
+    "ChooseAdestination(Deletewhatsapp)": "Choose destination (Delete whatsapp)",
     "You must accept the terms and conditions": "You must accept the terms and conditions",
     "usd": "USD",
     "DeletegroupsYouarenotaccepted": "Delete groups you are not accepted",
