--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -32,9 +32,16 @@
     "Choosedestination(X)": "أختر الوجهة (X)",
     "ChooseapersonfromXandsendyouradtoallhisfollowers": "أختر شخص من X ارسل اعلانك على جميع متابعينه",
     "Sendingon20trends:": "يتم الإرسال على 20 ترند :",
-    "Searchforxtrends": "ابحث عن ترندات X",
+    "Searchforxtrends": "#ترندات_اليوم",
     "Xtrendsareupdateddailywiththespeedofmarketing": "يتحدث ترندات X بشكل يومى مع سرعة التسويق",
     "Publishyouradon5trends": "أنشر أعلانك على 5 ترندات X",
+    "Publishyouradon10trends": "أنشر أعلانك على 10 ترندات X",
+    "Publishyouradon15trends": "أنشر أعلانك على 15 ترندات X",
+    "Publishyouradon20trends": "أنشر أعلانك على 20 ترندات X",
+    "Publishyourinstagramadon5trends": "أنشر أعلانك على 5 ترندات الانستغرام",
+    "Publishyourinstagramadon10trends": "أنشر أعلانك على 10 ترندات الانستغرام",
+    "Publishyourinstagramadon15trends": "أنشر أعلانك على 15 ترندات الانستغرام",
+    "Publishyourinstagramadon20trends": "أنشر أعلانك على 20 ترندات الانستغرام",
     "addtrends": "#   إضافة ترند",
     "SeehowtouseX?": "شاهد طريقة أستخدام X ؟",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "العدد المسموح الأرسال عليه 400 شخص فقط الرجاء شحن المزيد من الماسات",
