--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -32,9 +32,16 @@
     "Choosedestination(X)": "Choose destination (X)",
     "ChooseapersonfromXandsendyouradtoallhisfollowers": "Choose a person from X and send your ad to all his followers",
     "Sendingon20trends:": "Sending on 20 trends :",
-    "Searchforxtrends": "Search for X trends",
+    "Searchforxtrends": "#Today's trends",
     "Xtrendsareupdateddailywiththespeedofmarketing": "X trends are updated daily with the speed of marketing",
     "Publishyouradon5trends": "Publish your ad on 5 trends X",
+    "Publishyouradon10trends": "Publish your ad on 10 trends X",
+    "Publishyouradon15trends": "Publish your ad on 15 trends X",
+    "Publishyouradon20trends": "Publish your ad on 20 trends X",
+    "Publishyourinstagramadon5trends": "Publish your instagram ad on 5 trends",
+    "Publishyourinstagramadon10trends": "Publish your instagram ad on 10 trends",
+    "Publishyourinstagramadon15trends": "Publish your instagram ad on 15 trends",
+    "Publishyourinstagramadon20trends": "Publish your instagram ad on 20 trends",
     "addtrends": "# Add a trend",
     "SeehowtouseX?": "See how to use X?",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "The number allowed to be sent is 400 people only. Please charge more diamonds.",
