Edit Hashtag name & delete arrow country and phone

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -38,10 +38,10 @@
     "Publishyouradon10trends": "أنشر أعلانك على 10 ترندات X",
     "Publishyouradon15trends": "أنشر أعلانك على 15 ترندات X",
     "Publishyouradon20trends": "أنشر أعلانك على 20 ترندات X",
-    "Publishyourinstagramadon5trends": "أنشر أعلانك على 5 ترندات الانستغرام",
-    "Publishyourinstagramadon10trends": "أنشر أعلانك على 10 ترندات الانستغرام",
-    "Publishyourinstagramadon15trends": "أنشر أعلانك على 15 ترندات الانستغرام",
-    "Publishyourinstagramadon20trends": "أنشر أعلانك على 20 ترندات الانستغرام",
+    "Publishyourinstagramadon5trends": "أنشر أعلانك على 5 هاشتاجات الانستجرام",
+    "Publishyourinstagramadon10trends": "أنشر أعلانك على 10 هاشتاجات الانستجرام",
+    "Publishyourinstagramadon15trends": "أنشر أعلانك على 15 هاشتاجات الانستجرام",
+    "Publishyourinstagramadon20trends": "أنشر أعلانك على 20 هاشتاجات الانستجرام",
     "addtrends": "#   إضافة ترند",
     "SeehowtouseX?": "شاهد طريقة أستخدام X ؟",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "العدد المسموح الأرسال عليه 400 شخص فقط الرجاء شحن المزيد من الماسات",
