--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -38,10 +38,10 @@
     "Publishyouradon10trends": "Publish your ad on 10 trends X",
     "Publishyouradon15trends": "Publish your ad on 15 trends X",
     "Publishyouradon20trends": "Publish your ad on 20 trends X",
-    "Publishyourinstagramadon5trends": "Publish your instagram ad on 5 trends",
-    "Publishyourinstagramadon10trends": "Publish your instagram ad on 10 trends",
-    "Publishyourinstagramadon15trends": "Publish your instagram ad on 15 trends",
-    "Publishyourinstagramadon20trends": "Publish your instagram ad on 20 trends",
+    "Publishyourinstagramadon5trends": "Publish your instagram ad on 5 hashtags",
+    "Publishyourinstagramadon10trends": "Publish your instagram ad on 10 hashtags",
+    "Publishyourinstagramadon15trends": "Publish your instagram ad on 15 hashtags",
+    "Publishyourinstagramadon20trends": "Publish your instagram ad on 20 hashtags",
     "addtrends": "# Add a trend",
     "SeehowtouseX?": "See how to use X?",
     "The number allowed to be sent is 400 people only. Please charge more diamonds.": "The number allowed to be sent is 400 people only. Please charge more diamonds.",
