Add Suggestion View Light Mode

--- a/assets/translation/ar.json
+++ b/assets/translation/ar.json
@@ -167,7 +167,7 @@
     "snapchat": "سناب شات",
     "TikTok": "تيك توك",
     "ouraccounts": "حسابتنا الرسمية",
-    "wethankyouforsuggestion": "سرعة التسويق يشكرك على االاقتراح",
+    "wethankyouforsuggestion": "سرعة التسويق يشكرك على الاقتراح",
     "send": "إرسال",
     "writeyoursuggestion": "أطرح أقتراحك",
     "WeHelpYou": "نساعدك فى بناء تجربتك مع سرعه التسويق ",
